--- a/root/src/ttsite.css
+++ b/root/src/ttsite.css
@@ -22,6 +22,7 @@ a {
 
 #header {
     background-color: [% site.col.head %];
+    border-bottom: 1px solid [% site.rgb.grey2 %];
     padding: 10px;
 }
 #header div.menu {
@@ -38,6 +39,7 @@ a {
     background-color: [% site.col.head %];
     text-align: center;
     padding: 4px;
+    border-top: 1px solid [% site.rgb.grey2 %];
 }
 
 #content {
@@ -51,6 +53,14 @@ h1 {
 h1.title {
     padding: 4px;
     margin: 0px;
+}
+
+div.message {
+    border: 1px solid [% site.rgb.grey2 %];
+    background-color: [% site.col.head %];
+    text-align: center;
+    padding: 4px;
+    margin: 10px 50px;
 }
 
 .message {
