--- a/root/src/ttsite.css
+++ b/root/src/ttsite.css
@@ -75,15 +75,18 @@ form {
     margin: 30px;
 }
 
+table th {
+    color: [% site.rgb.soffritto %];
+    margin-left: 5px;
+    text-align: right;
+    vertical-align: baseline;
+}
+
 table.data {
     width: 300px;
 }
 
 table.data th {
-    color: [% site.rgb.soffritto %];
-    margin-left: 5px;
-    text-align: right;
-    vertical-align: baseline;
     width: 70px;
 }
 
