--- a/root/src/ttsite.css
+++ b/root/src/ttsite.css
@@ -1,6 +1,6 @@
 * {
     font-family: "Lucida Grande", Verdana, Arial, Geneva, sans-serif;
-    line-height: 1.8em;
+    line-height: 1.5em;
     font-weight: normal;
 }
 
@@ -72,11 +72,12 @@ div.message {
 }
 
 form {
-    margin: 30px;
+    margin: 5px;
 }
 
 input[type="text"], input[type="password"], textarea {
     border: 1px solid [% site.rgb.grey2 %];
+    padding: 4px;
 }
 
 table th {
@@ -86,8 +87,12 @@ table th {
     vertical-align: baseline;
 }
 
+table {
+    border-collapse: collapse;
+}
+
 table.data {
-    width: 300px;
+    width: 350px;
 }
 
 table.data th {
@@ -122,7 +127,10 @@ table.data textarea {
 label {
     font-size: 80%;
 }
-input.checkbox {
-    width: 8px;
-    border: none;
+
+.week_input th, .week_input td {
+    text-align: center;
+    font-size: 80%;
+    margin: 0px;
+    padding: 0px;
 }
