--- a/root/static/css/mobile.css
+++ b/root/static/css/mobile.css
@@ -1,9 +1,22 @@
-body {
-    font-size: small;
+.restrantodd {
+    background-color: #ffffcc;
 }
 #header {
     background-color: #FCC800;
     text-align: center;
+}
+#copyright {
+    text-align: center;
+    background-color: #FCC800;
+}
+#mapcontrol {
+    text-align: center;
+}
+#searchbox {
+    text-align: center;
+}
+body {
+    font-size: small;
 }
 h1 {
     font-size: medium;
@@ -29,14 +42,4 @@ table {
 }
 th {
     font-weight: normal;
-}
-#copyright {
-    text-align: center;
-    background-color: #FCC800;
-}
-#mapcontrol {
-    text-align: center;
-}
-#searchbox {
-    text-align: center;
 }
