show selected tag in tag search

--- a/root/static/css/mobile.css
+++ b/root/static/css/mobile.css
@@ -24,7 +24,7 @@ h1 {
     color: #FFFFFF;
 }
 h2 {
-    font-size: medium;
+    font-size: small;
     font-weight: normal;
     text-align: center;
     background-color: #89b8df;
